# toons

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  TOON_SPEC_1.3.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  toons.pyi
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: CI.yml
docs/: README.md  api-reference.md  contributing.md  data-types.md  development.md  examples.md  getting-started.md  index.md  quick-start.md  specification.md  testing-guide.md  testing.md
examples/: comparison.py  data.toon  dates.py  file_example.py  string_example.py
src/: deserialization.rs  lib.rs  rtoon_impl.rs  serialization.rs  toon.rs
src/toon/: deserialize.rs  mod.rs  serialize.rs
tests/: README.md  conftest.py
tests/data/: complex_test.json  complex_test.toon
tests/integration/: conftest.py  test_complex_regression.py  test_decode_errors.py  test_non_serializable.py  test_smoke.py  test_spec_fixtures.py  test_to_json.py
tests/unit/: README.md  test_complex_regression.py  test_delimiter.py  test_dumps.py  test_indent.py  test_spec_compliance.py  test_spec_v1_3_compliance.py  test_strict_flag.py
