[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "toons"
authors = [
    { name = "Alessio Sanfratello", email = "sanfra90@gmail.com" },
]
description = "A high-performance TOON (Token Oriented Object Notation) parser and serializer for Python, implemented in Rust."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/alesanfra/toons"
Source = "https://github.com/alesanfra/toons"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py37"]
include = ["toons.pyi"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]  # Enable pycodestyle errors, pyflakes, and isort
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["toons"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
